[project]
name = "slrt"
version = "0.1.0"
description = "Sign Language Recognition and Translation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "portalocker>=3.2.0",
    "pyyaml>=6.0.2",
    "tensorflow>=2.19.0",
    "torch>=2.8.0",
    "torchtext>=0.18.0",
]
